# B2Dh-D2KKpipi-Selection

./: CMakeLists.txt  README.md
AmpGen_Models/: DtoKKpipi_v2.opt
apps/: Additional4piCuts.cpp  ApplyFinalCuts.cpp  BDTClassifier.cpp  BinEvents.cpp  CMakeLists.txt  CheckEventNumbers.cpp  PrepareBackgroundTrainingSample.cpp  PrepareDataForBDT.cpp  PrepareSample.cpp  PrepareSignalTrainingSample.cpp  RemoveClones.cpp  RemoveMultipleCandidates.cpp  TrainBDT.cpp
include/: AmplitudePhaseSpace.h  ApplyCuts.h  BDTVariables.h  BaseCuts.h  CharmlessCuts.h  CombinatorialBMassCut.h  EventNumbers.h  FinalCuts.h  HighBMassCut.h  TruthMatchingCuts.h  Utilities.h
src/: Amplitude.cpp  AmplitudePhaseSpace.cpp  ApplyCuts.cpp  BDTVariables.cpp  BaseCuts.cpp  CMakeLists.txt  CharmlessCuts.cpp  CombinatorialBMassCut.cpp  EventNumbers.cpp  FinalCuts.cpp  HighBMassCut.cpp  TruthMatchingCuts.cpp  Utilities.cpp
